# algoritmos-em-c

./: .gitignore  CMakeLists.txt  README.md
Base Teórica e Prática/Estruturas-repetição/: README.md
Base Teórica e Prática/Matrizes/: README.md
Base Teórica e Prática/Vetores/: README.md
Base-Teórica_Prática/Estruturas-repetição/: README.md
Base-Teórica_Prática/Matrizes/: README.md
Base-Teórica_Prática/Vetores/: README.md
Base-Teórica_Prática/fundamentos-logica/: README.md
Estruturas-repetição/: README.md
Estruturas-repetição/expressao-matematica/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/inverter-numero/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/maior-valor/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/multiplicacao-soma/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/multiplos-ate-1000/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/nesimo-fibonacci/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/numeros-capicua/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/numeros-pares/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/numeros-perfeitos/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/numeros-primos/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/quociente-resto-sem-divisao/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/soma-digitos/: CMakeLists.txt  README.md  main.c
Estruturas-repetição/tabuada/: CMakeLists.txt  README.md  main.c
Matriz/: README.md
Matriz/boletim-escolar/: CMakeLists.txt  README.md  main.c
Matriz/busca-maior-elemento/: CMakeLists.txt  README.md  main.c
Matriz/busca-valor/: CMakeLists.txt  README.md  main.c
Matriz/contador-pares/: CMakeLists.txt  README.md  main.c
Matriz/extrair-coluna-matriz/: CMakeLists.txt  README.md  main.c
Matriz/maior-que-soma-indices/: CMakeLists.txt  README.md  main.c
Matriz/maior-soma-submatriz/: CMakeLists.txt  README.md  main.c
Matriz/matriz-transposta/: CMakeLists.txt  README.md  main.c
Matriz/multiplicacao-matrizes/: CMakeLists.txt  README.md  main.c
Matriz/multiplicar-matriz-escalar/: CMakeLists.txt  README.md  main.c
Matriz/soma-acima-diagonais/: CMakeLists.txt  README.md  main.c
Matriz/soma-ambas-diagonais/: CMakeLists.txt  README.md  main.c
Matriz/soma-colunas/: CMakeLists.txt  README.md  main.c
Matriz/soma-diagonais/: CMakeLists.txt  README.md  main.c
Matriz/soma-diagonais-matriz/: README.md  main.c
Matriz/soma-diagonal-principal/: CMakeLists.txt  README.md  main.c
Matriz/soma-diagonal-secundaria/: CMakeLists.txt  README.md  main.c
Matriz/soma-duas-matrizes/: CMakeLists.txt  README.md  main.c
Matriz/soma-linhas/: CMakeLists.txt  README.md  main.c
Matriz/soma-triangulo-inferior/: CMakeLists.txt  README.md  main.c
Matriz/soma-triangulo-superior/: CMakeLists.txt  README.md  main.c
Matriz/somatorio/: README.md  main.c
Matriz/somatorio-matriz/: CMakeLists.txt
Matriz/tic-tac-toe/: CMakeLists.txt  README.md  main.c
Vetores/: README.md
Vetores/Maior_Menor_Valor/: CMakeLists.txt  README.md  main.c
Vetores/Remover_Repetidos/: CMakeLists.txt  README.md  main.c
Vetores/Somente_Ler_Numeros_Diferente/: CMakeLists.txt  README.md  main.c
Vetores/busca-vetor/: CMakeLists.txt  README.md  main.c
Vetores/contador_pares-vetor/: CMakeLists.txt  README.md  main.c
Vetores/elemento-maior-que-soma/: CMakeLists.txt  README.md  main.c
Vetores/elementos-adjacentes-iguais/: CMakeLists.txt  README.md  main.c
Vetores/interseccao-vetores/: CMakeLists.txt  README.md  main.c
Vetores/media-vetor/: CMakeLists.txt  README.md  main.c
Vetores/ocorrencias-vetor/: CMakeLists.txt  README.md  main.c
Vetores/ordenacao-vetor/: CMakeLists.txt  README.md  main.c
Vetores/rotacao-de-vetor/: CMakeLists.txt  README.md  main.c
Vetores/soma-vetor/: CMakeLists.txt  README.md  main.c
Vetores/vetor-invertido/: CMakeLists.txt  README.md  main.c
fundamentos-logica/: README.md
fundamentos-logica/Media-notas/: CMakeLists.txt  README.md  main.c
fundamentos-logica/Salarioprof-horas_trabalhadas/: CMakeLists.txt  README.md  main.c
fundamentos-logica/calculadora/: CMakeLists.txt  README.md  main.c
(+3 files in other folders)
